# mime_guess

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  deploy-docs.sh  id_rsa.enc
benches/: benchmark.rs
doc/: search-index.js
doc/mime_guess/: fn.get_extensions.html  fn.get_mime_extensions.html  fn.get_mime_extensions_str.html  fn.get_mime_type.html  fn.get_mime_type_opt.html  fn.get_mime_type_str.html  fn.guess_mime_type.html  fn.guess_mime_type_opt.html  fn.octet_stream.html  index.html
doc/src/mime_guess/src/: lib.rs.html
examples/: ext_guess.rs  rev_map.rs
src/: gen_mime_types.rs  impl_bin_search.rs  impl_phf.rs  lib.rs  mime_types.rs
src/lut/: mod.rs
