[package]

name = "mime_guess"
version = "1.8.8"
authors = ["Austin Bonander <austin.bonander@gmail.com>"]
license = "MIT"
description = "A simple crate for detection of a file's MIME type by its extension."
keywords = ["mime", "filesystem", "extension"]
repository = "https://github.com/abonander/mime_guess"
documentation = "https://docs.rs/mime_guess/"

[features]
bench = []

[dependencies]
mime = ">=0.1, <0.3"
phf = { version = "0.7", features = ["unicase"] }
unicase = "1.1"

[build-dependencies]
# phf is here in order to work around the fact that phf_codegen does not
# expose the unicase feature, but depends on phf_shared being compiled with
# unicase enabled. This enables mime_guess to compile even with the new -Z
# features resolver in cargo.
phf = { version = "0.7", features = ["unicase"] }
phf_codegen = "0.7"
unicase = "1.1"
